Remove sdk-jdk7 artifact (#1405)
* delete sdk-jdk7 artifact

Signed-off-by: dikel <dikelito@tutamail.com>

* fix examples

Signed-off-by: dikel <dikelito@tutamail.com>

* remove javacrumbs.futureconverter dependency

Signed-off-by: dikel <dikelito@tutamail.com>

* update changelog

Signed-off-by: dikel <dikelito@tutamail.com>

* fix tests

Signed-off-by: dikel <dikelito@tutamail.com>

* fix code smells

Signed-off-by: dikel <dikelito@tutamail.com>

* fix tests

Signed-off-by: dikel <dikelito@tutamail.com>

* fix code smells

Signed-off-by: dikel <dikelito@tutamail.com>

* update gradle wrapper

Signed-off-by: dikel <dikelito@tutamail.com>

* update gradle wrapper

Signed-off-by: dikel <dikelito@tutamail.com>

---------

Signed-off-by: dikel <dikelito@tutamail.com>